# happierr

./: PROJECT_CONTEXT.md  README.md  ROADMAP.md  pyproject.toml
src/happierr/: cli.py
src/happierr/commands/: errors.py  explain.py  main.py
src/happierr/messages/: attribute_error.py  file_not_found.py  guides.py  import_error.py  index_error.py  key_error.py  module_not_found.py  name_error.py  syntax_error.py  type_error.py  value_error.py
src/happierr/models/: error_guide.py  response.py
src/happierr/patterns/: file_not_found.py  import_error.py  module_not_found.py  syntax_error.py
src/happierr/renderers/: console_renderer.py
tests/: test_file_not_found.py  test_import_error.py
